--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,10 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "^3.2",
+        "filament/spatie-laravel-translatable-plugin": "^3.2",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
+        "spatie/laravel-translatable": "^6.8",
         "tomatophp/filament-simple-theme": "^1.0"
     },
     "require-dev": {
