--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "filament/spatie-laravel-translatable-plugin": "^3.2",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
+        "spatie/laravel-sluggable": "^3.6",
         "spatie/laravel-translatable": "^6.8",
         "tomatophp/filament-simple-theme": "^1.0"
     },
