--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "filament/spatie-laravel-translatable-plugin": "^3.2",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
+        "roach-php/laravel": "^3.1",
         "spatie/laravel-sluggable": "^3.6",
         "spatie/laravel-translatable": "^6.8",
         "tomatophp/filament-simple-theme": "^1.0"
