--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "filament/filament": "^3.2",
         "filament/spatie-laravel-media-library-plugin": "^3.2",
         "filament/spatie-laravel-translatable-plugin": "^3.2",
+        "google/cloud-translate": "^1.20",
         "kalnoy/nestedset": "^6.0",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
